<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:ems="11"
            android:hint="@string/bindingMobile_hit"
            android:inputType="phone"
            android:textColorHint="@color/text_color_1"
            android:textSize="@dimen/bindingMobile_font_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:lineSpacingExtra="@dimen/height5"
            android:padding="@dimen/padding5"
            android:text="@string/bindingMobile_info"
            android:textColor="@color/text_color_1"
            android:textSize="@dimen/text_font_0" />

        <EditText
            android:id="@+id/yzm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin10"
            android:ems="11"
            android:hint="@string/bindingMobile_yanzheng_hit"
            android:inputType="number"
            android:textColorHint="@color/text_color_1"
            android:textSize="@dimen/bindingMobile_font_1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8">

            <Button
                android:id="@+id/control1"
                style="@style/CustomButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/bindingMobile_yanzheng_cxhq" />

            <Button

                android:id="@+id/control2"
                style="@style/CustomButton"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/control1"
                android:text="@string/bindingMobile_yanzheng_wc" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/control1"
                android:layout_marginTop="@dimen/margin5"
                android:text="@string/bindingMobile_yanzheng_ts"
                android:textColor="@color/colorTS"
                android:textSize="@dimen/Mobile_yanzheng_font_1"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>



</LinearLayout>
