<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/cydxm_qb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:paddingLeft="@dimen/padding16"
            android:text="@string/cydxm_cydxm"
            android:textColor="@color/colorInfo"
            android:textSize="@dimen/text_font_8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:drawablePadding="@dimen/padding10"
            android:drawableRight="@mipmap/icon_26"
            android:gravity="right|center_vertical"
            android:paddingRight="@dimen/padding16"
            android:text="@string/cydxm_qb"
            android:textColor="@color/text_color_7"
            android:textSize="@dimen/text_font_0"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/cydfw_ybx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:drawablePadding="@dimen/padding10"
            android:drawableTop="@mipmap/icon_141"
            android:padding="@dimen/padding10"
            android:text="@string/cydxm_ybx"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_font_4" />

        <TextView
            android:id="@+id/cydfw_yzb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:drawablePadding="@dimen/padding10"
            android:drawableTop="@mipmap/icon_142"
            android:padding="@dimen/padding10"
            android:text="@string/cydxm_yzb"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_font_4" />

        <TextView
            android:id="@+id/cydfw_bhg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:drawablePadding="@dimen/padding10"
            android:drawableTop="@mipmap/icon_143"
            android:padding="@dimen/padding10"
            android:text="@string/cydxm_bhg"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_font_4" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height5" />

    <LinearLayout
        android:id="@+id/scdfw_qb"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:paddingLeft="@dimen/padding16"
            android:text="@string/cydxm_scdfw"
            android:textColor="@color/colorInfo"
            android:textSize="@dimen/text_font_8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:drawablePadding="@dimen/padding10"
            android:drawableRight="@mipmap/icon_26"
            android:gravity="right|center_vertical"
            android:paddingRight="@dimen/padding16"
            android:text="@string/cydxm_qb"
            android:textColor="@color/text_color_7"
            android:textSize="@dimen/text_font_2" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scdfw_dtg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:drawablePadding="@dimen/padding10"
            android:drawableTop="@mipmap/icon_64"
            android:padding="@dimen/padding10"
            android:text="@string/cydxm_dtg"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_font_4" />

        <TextView
            android:id="@+id/scdfw_dqr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:drawablePadding="@dimen/padding10"
            android:drawableTop="@mipmap/icon_66"
            android:padding="@dimen/padding10"
            android:text="@string/cydxm_dqr"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_font_4" />

        <TextView
            android:id="@+id/scdfw_dfk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:drawablePadding="@dimen/padding10"
            android:drawableTop="@mipmap/icon_65"
            android:padding="@dimen/padding10"
            android:text="@string/cydxm_dfk"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_font_2"
            android:visibility="gone" />

        <TextView
            android:id="@+id/scdfw_dpj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:drawablePadding="@dimen/padding10"
            android:drawableTop="@mipmap/icon_67"
            android:padding="@dimen/padding10"
            android:text="@string/cydxm_dpj"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_font_2"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>