<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <!--<include layout="@layout/hide_zhuangtailan"></include>-->


    <EditText
        android:id="@+id/oldpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/xgmm_jmm_hint"
        android:inputType="textPassword"
        android:padding="@dimen/padding16"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorhit"
        android:textSize="@dimen/text_font_4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line" />


    <EditText
        android:id="@+id/NewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/xgmm_xmm_hint"
        android:inputType="textPassword"
        android:padding="@dimen/padding16"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorhit"
        android:textSize="@dimen/text_font_4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:hint="@string/xgmm_qrmm_hint"
        android:inputType="textPassword"
        android:padding="@dimen/padding16"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorhit"
        android:textSize="@dimen/text_font_4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/line" />

    <Button
        android:id="@+id/contorl"
        style="@style/CustomTextButton"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginRight="@dimen/margin16"
        android:layout_marginTop="@dimen/margin30"
        android:text="@string/xgmm_qrxg" />


</LinearLayout>